fix(web): dark mode tweak

--- a/web/src/components/interaction/editable-text/editable-text.less
+++ b/web/src/components/interaction/editable-text/editable-text.less
@@ -3,7 +3,6 @@
   width: 100%;
   min-height: 12px;
   display: inline-block;
-  color: var(--body-fg);
 
   .empty {
     font-style: italic;
