--- a/web/src/components/objects/entity-list/entity.less
+++ b/web/src/components/objects/entity-list/entity.less
@@ -13,7 +13,7 @@
     // when swiped (done)
     .swipe-container {
       min-height: @item-min-height;
-      border-bottom: @entity-component-list-separator-border;
+      border-bottom: var(--entity-component-list-separator-border);
       position: relative;
       padding: 5px 5px;
       display: block;
