--- a/web/src/components/objects/header.less
+++ b/web/src/components/objects/header.less
@@ -5,7 +5,7 @@
   position: relative;
   background: var(--entity-component-header-bg);
   height: @entity-component-header-height;
-  border-bottom: @entity-component-header-border;
+  border-bottom: var(--entity-component-header-border);
   color: var(--entity-component-header-fg);
   @icon-size: 14px;
 
