--- a/web/src/style/variables.less
+++ b/web/src/style/variables.less
@@ -16,8 +16,8 @@
 
 @entity-component-border: 1px solid #D3D3D3;
 @entity-component-border-dark: 1px solid #505050;
-@entity-component-list-separator-border-color: #ebebeb;
-@entity-component-list-separator-border: 1px solid @entity-component-list-separator-border-color;
+@entity-component-list-separator-border: 1px solid #ebebeb;
+@entity-component-list-separator-border-dark: 1px solid #616161;
 @entity-component-padding-side: 5px;
 @entity-component-padding-between: 5px;
 @entity-component-min-width: 250px;
@@ -27,7 +27,7 @@
 @entity-component-bg-selected-dark: #434c54;
 @entity-component-bg-done: #5CB296;
 @entity-component-bg-hover: #F0F0F0;
-@entity-component-bg-hover-dark: #30373c;
+@entity-component-bg-hover-dark: #1d2124;
 @entity-component-bg-disabled: #F3F3F3;
 @entity-component-bg-disabled-dark: #30373c;
 @entity-component-drag-placeholder-bg: #D3D3D3;
@@ -35,17 +35,18 @@
 @entity-component-header-bg: #F5F5F5;
 @entity-component-header-bg-dark: #3D434F;
 @entity-component-header-fg: #6A6A6A;
-@entity-component-header-fg-dark: #b9b9b9;
+@entity-component-header-fg-dark: #e1e1e1;
 @entity-component-header-actions-fg: #6A6A6A;
-@entity-component-header-actions-fg-dark: #b9b9b9;
+@entity-component-header-actions-fg-dark: #e1e1e1;
 @entity-component-header-actions-hover-fg: @exomind-secondary;
 @entity-component-header-height: 35px;
 @entity-component-header-border: 1px solid #E0E0E0;
+@entity-component-header-border-dark: 1px solid #616161;
 
 @entity-component-item-fg: #000000;
-@entity-component-item-fg-dark: #b9b9b9;
+@entity-component-item-fg-dark: #e1e1e1;
 @entity-component-item-actions-icon-fg: #000000;
-@entity-component-item-actions-icon-fg-dark: #b9b9b9;
+@entity-component-item-actions-icon-fg-dark: #e1e1e1;
 
 @entity-component-field-pill-fg: #490A3D;
 @entity-component-field-pill-bg: rgba(233, 127, 2,  0.3);
@@ -86,6 +87,7 @@
     --body-fg: @body-fg;
 
     --entity-component-border: @entity-component-border;
+    --entity-component-list-separator-border: @entity-component-list-separator-border;
     --entity-component-bg: @entity-component-bg;
     --entity-component-bg-selected: @entity-component-bg-selected;
     --entity-component-bg-hover: @entity-component-bg-hover;
@@ -94,6 +96,7 @@
     --entity-component-header-bg : @entity-component-header-bg;
     --entity-component-header-fg: @entity-component-header-fg;
     --entity-component-header-actions-fg: @entity-component-header-actions-fg;
+    --entity-component-header-border: @entity-component-header-border;
 
     --entity-component-item-fg: @entity-component-item-fg;
     --entity-component-item-actions-icon-fg: @entity-component-item-actions-icon-fg;
@@ -111,6 +114,7 @@
     --body-fg: @body-fg-dark;
 
     --entity-component-border: @entity-component-border-dark;
+    --entity-component-list-separator-border: @entity-component-list-separator-border-dark;
     --entity-component-bg: @entity-component-bg-dark;
     --entity-component-bg-selected: @entity-component-bg-selected-dark;
     --entity-component-bg-hover: @entity-component-bg-hover-dark;
@@ -119,6 +123,7 @@
     --entity-component-header-bg : @entity-component-header-bg-dark;
     --entity-component-header-fg: @entity-component-header-fg-dark;
     --entity-component-header-actions-fg: @entity-component-header-actions-fg-dark;
+    --entity-component-header-border: @entity-component-header-border-dark;
 
     --entity-component-item-fg: @entity-component-item-fg-dark;
     --entity-component-item-actions-icon-fg: @entity-component-item-actions-icon-fg-dark;
